master: routing done

--- a/Architect network infrastructure in Azure/7 .Routing in Azure.md
+++ b/Architect network infrastructure in Azure/7 .Routing in Azure.md
@@ -94,6 +94,52 @@
       ```
 
 - [What is an NVA?](https://docs.microsoft.com/en-au/learn/modules/control-network-traffic-flow-with-routes/4-network-virtual-appliances)
+  - A network virtual appliance (NVA) is a virtual appliance that consists of various layers like:
+    - a firewall
+    - a WAN optimizer
+    - application-delivery controllers
+    - routers
+    - load balancers
+    - IDS/IPS
+    - proxies
+  - You can deploy NVAs chosen from **providers** in **Azure** **Marketplace**. Such providers include Check Point, Barracuda, Sophos, WatchGuard, and SonicWall. You can use an NVA to filter traffic inbound to a virtual network, to block malicious requests, and to block requests made from unexpected resources.
+  - Network virtual appliance
+    - Network virtual appliances or NVAs are **virtual machines** that control the flow of **network traffic** by **controlling routing**. 
+    - You typically use them to manage traffic flowing from a perimeter-network environment **to other networks or subnets**.
+    - ![](2019-11-10-10-20-56.png)
+  - microsegmentation 
+    - With the microsegmentation approach, you can create dedicated subnets for the firewall and then deploy web applications and other services in other subnets. All traffic is routed through the firewall and inspected by the NVAs. You enable forwarding on the virtual-appliance network interfaces to pass traffic that is accepted by the appropriate subnet.
+    - Microsegmentation lets the firewall inspect all packets at OSI Layer 4 and, for application-aware appliances, Layer 7. When you deploy an NVA to Azure, it acts as a router that forwards requests between subnets on the virtual network.
+  - Check your knowledge
+    - ![](2019-11-10-10-22-25.png)
 - [Exercise - Create an NVA and virtual machines](https://docs.microsoft.com/en-au/learn/modules/control-network-traffic-flow-with-routes/5-exercise-create-nva-vm)
+  - ![](2019-11-10-10-30-27.png)
+  - Create a VM
+  - Enable IP forwarding for the Azure network interface
+    ```bash
+    az network nic update --name $NICNAME \
+      --resource-group [sandbox resource group name] \
+      --ip-forwarding true
+    ```
+  - Run the following command to enable IP forwarding within the NVA.
+    ```bash
+    ssh -t -o StrictHostKeyChecking=no azureuser@$NVAIP 'sudo sysctl -w net.ipv4.ip_forward=1; exit;'
+    ```
 - [Exercise - Route traffic through the NVA](https://docs.microsoft.com/en-au/learn/modules/control-network-traffic-flow-with-routes/6-exercise-route-traffic-through-nva)
+  - Create public and private virtual machines
+  - Test traffic routing through the network virtual appliance
+    - Run the following command to trace the route from **public** to **private**. 
+      ```bash
+      ssh -t -o StrictHostKeyChecking=no azureuser@$PUBLICIP 'traceroute private --type=icmp; exit'
+      ```
+      - output:
+      ```
+      traceroute to private.kzffavtrkpeulburui2lgywxwg.gx.internal.cloudapp.net (10.0.1.4), 64 hops max
+      1   10.0.2.4  0.710ms  0.410ms  0.536ms
+      2   10.0.1.4  0.966ms  0.981ms  1.268ms
+      Connection to 52.165.151.216 closed.
+      ```
+      - Notice that the first hop is to 10.0.2.4. This address is the private IP address of nva. The second hop is to 10.0.1.4, the address of private. In the first exercise, you added this route to the route table and linked the table to the **publicsubnet** **subnet**. So now all traffic from **public to private** is routed through the network virtual appliance.
+      - Requests from **private** to **public** will still go directly to **public**
+    - ![](2019-11-10-10-38-40.png)
 - [Summary](https://docs.microsoft.com/en-au/learn/modules/control-network-traffic-flow-with-routes/7-summary)
