--- a/Architect network infrastructure in Azure/9 .Hub and spoke.md
+++ b/Architect network infrastructure in Azure/9 .Hub and spoke.md
@@ -48,7 +48,7 @@
     - **Azure ExpressRoute**
       - ExpressRoute creates a dedicated private WAN link between on-premises resources and an Azure gateway subnet in the hub virtual network. You add a network security appliance between the on-premises network and the ExpressRoute provider edge routers. This restricts the flow of unauthorized traffic from the virtual network.
   - Azure Firewall
-    - Microsoft manages this network security service. It protects Azure virtual networks and their resources by letting you manage and enforce connectivity policies centrally. 
+    - Microsoft **manages** this network security service. It protects Azure virtual networks and their resources by letting you manage and enforce connectivity policies centrally. 
     - Azure Firewall enables central control of all network communications through policy enforcement. 
     - Azure Firewall is typically provisioned in the hub for complete control of traffic through the network.
     - ![](2019-11-10-12-51-27.png)
